--- a/m_library/templates/blog/blog.html
+++ b/m_library/templates/blog/blog.html
@@ -19,7 +19,7 @@
                                 </div>
                                 <div class="post-meta">
                                     <span class="post-author">
-                                        <a href=""><img class="img-res" src="../../staticfiles/img/author.jpg"
+                                        <a href=""><img class="img-res" src="/media/{{ post.user.avatar }}"
                                                         alt="">{{ post.user }}</a>
                                     </span>
                                     <span class="post-date">
@@ -68,6 +68,7 @@
                             </form>
 
 
+                            {% if request.user.is_authenticated %}
                             <aside class="col-md-4">
                                 <div class="buttons mt-50">
                                     <div class="row">
@@ -77,6 +78,7 @@
                                     </div>
                                 </div>
                             </aside>
+                            {% endif %}
 
                         </div><!-- /.search-form -->
                     </div><!-- /.sidebar -->
