--- a/m_library/templates/books/all-books.html
+++ b/m_library/templates/books/all-books.html
@@ -1,4 +1,5 @@
 {% extends 'base/base_library.html' %}
+{% load static %}
 {% load class_filter %}
 {% block page_content %}
 
@@ -24,7 +25,11 @@
 
                     <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["webdesign"]'>
                         <div class="portfolio-item">
-                            <img src="{{ book.cover }}" class="img-res" alt="">
+                            {% if book.cover %}
+                            <img src="/media/{{ book.cover }}" class="img-res" alt="{{ book.title }}">
+                            {% else %}
+                            <img src="{% static 'img/default_book_cover.png' %}" class="img-res" alt="{{ book.title }}">
+                            {% endif %}
                             <h4 class="portfolio-item-title">{{ book.title }}</h4>
                             <a href="{% url 'book details' pk=book.pk %}"><i class="fa fa-arrow-right"
                                                                              aria-hidden="true"></i></a>
