--- a/m_library/templates/books/book-details.html
+++ b/m_library/templates/books/book-details.html
@@ -2,107 +2,111 @@
 {% load static %}
 {% block page_content %}
 
-<section class="site-section subpage-site-section section-project">
+    <section class="site-section subpage-site-section section-project">
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                {#                    <div class="project-img">#}
-                {#                        <img src="{{ book.cover }}" class="img-res" alt="">#}
-                {#                    </div><!-- /.project-img -->#}
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    {#                    <div class="project-img">#}
+                    {#                        <img src="{{ book.cover }}" class="img-res" alt="">#}
+                    {#                    </div><!-- /.project-img -->#}
 
-                <div class="col-sm-7">
-                    <img src="{{ book.cover }}" class="wdn-stretch rounded-corners" alt="">
+                    <div class="col-sm-7">
+                        <img src="/media/{{ book.cover }}" class="wdn-stretch rounded-corners" alt="">
+                    </div>
+
                 </div>
 
-            </div>
+                <aside class="col-md-4">
+                    <h2>{{ book.title }}</h2>
+                    <div class="project-info">
 
-            <aside class="col-md-4">
-                <h2>{{ book.title }}</h2>
-                <div class="project-info">
+                        <div class="project-date-category">
+                            <p><span>Author:</span>{{ book.author }}</p>
+                            <p><span>Genre:</span>{{ book.author }}</p>
+                            <p><span>Language:</span>{{ book.language }}</p>
+                            <p><span>Date:</span>{{ book.date_of_publication }}</p>
 
-                    <div class="project-date-category">
-                        <p><span>Author:</span>{{ book.author }}</p>
-                        <p><span>Genre:</span>{{ book.author }}</p>
-                        <p><span>Language:</span>{{ book.language }}</p>
-                        <p><span>Date:</span>{{ book.date_of_publication }}</p>
+                            <p><span>Description:</span></p>
 
-                        <p><span>Description:</span></p>
+                            <p class="project-description">{{ book.description }}</p>
+                        </div><!-- /.project-cat -->
 
-                        <p class="project-description">{{ book.description }}</p>
-                    </div><!-- /.project-cat -->
-
-                </div><!-- /.project-description -->
+                    </div><!-- /.project-description -->
 
 
-                <div class="buttons mt-50">
-                    <div class="row">
-                        <div class="col-sm-10">
+                    <div class="buttons mt-50">
+                        <div class="row">
+                            <div class="col-sm-10">
+                                {% if request.user.is_authenticated %}
 
-                            <a href="{% url 'add to favourites' book_id=book.pk %}" class="btn btn-border mb-10">
-                                {% if not book.is_favourite %}
-                                    Add to favourites
-                                {% else %}
-                                    Remove from favourites
+                                    <a href="{% url 'add to favourites' book_id=book.pk %}"
+                                       class="btn btn-border mb-10">
+                                        {% if not book.is_favourite %}
+                                            Add to favourites
+                                        {% else %}
+                                            Remove from favourites
+                                        {% endif %}
+                                    </a>
+
+                                    {% if is_owner %}
+                                        <a href="{% url 'edit book' pk=book.pk %}" class="btn btn-green mb-10">Edit
+                                            book</a>
+                                        <a href="{% url 'delete book' pk=book.pk %}" class="btn btn-fill mb-10">Delete
+                                            book</a>
+                                    {% endif %}
                                 {% endif %}
-                            </a>
-
-                            {% if is_owner %}
-                                <a href="{% url 'edit book' pk=book.pk %}" class="btn btn-green mb-10">Edit book</a>
-                                <a href="{% url 'delete book' pk=book.pk %}" class="btn btn-fill mb-10">Delete
-                                    book</a>
-                            {% endif %}
+                            </div>
                         </div>
-                    </div>
-                </div><!-- /.buttons -->
-            </aside>
-            {#            </div>#}
+                    </div><!-- /.buttons -->
+                </aside>
+                {#            </div>#}
+            </div>
         </div>
-    </div>
 
-</section><!-- /.section-project -->
-<section class="site-section subpage-site-section section-related-projects">
-    <div class="container">
-        <div class="text-left">
-            <h2>Other books</h2>
+    </section><!-- /.section-project -->
+    <section class="site-section subpage-site-section section-related-projects">
+        <div class="container">
+            <div class="text-left">
+                <h2>Other books</h2>
+            </div>
+            <div class="row">
+
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="portfolio-item">
+                        <img src="{% static 'img/portfolio-1.jpg' %}" class="img-res" alt="">
+                        <h4 class="portfolio-item-title">Portfolio item</h4>
+                        <a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                    </div><!-- /.portfolio-item -->
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="portfolio-item">
+                        <img src="{% static 'img/portfolio-1.jpg' %}" class="img-res" alt="">
+                        <h4 class="portfolio-item-title">Portfolio item</h4>
+                        <a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                    </div><!-- /.portfolio-item -->
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="portfolio-item">
+                        <img src="{% static 'img/portfolio-1.jpg' %}" class="img-res" alt="">
+                        <h4 class="portfolio-item-title">Portfolio item</h4>
+                        <a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                    </div><!-- /.portfolio-item -->
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="portfolio-item">
+                        <img src="{% static 'img/portfolio-1.jpg' %}" class="img-res" alt="">
+                        <h4 class="portfolio-item-title">Portfolio item</h4>
+                        <a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                    </div><!-- /.portfolio-item -->
+                </div>
+
+
+            </div>
         </div>
-        <div class="row">
-
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <div class="portfolio-item">
-                    <img src="{% static 'img/portfolio-1.jpg' %}" class="img-res" alt="">
-                    <h4 class="portfolio-item-title">Portfolio item</h4>
-                    <a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-                </div><!-- /.portfolio-item -->
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <div class="portfolio-item">
-                    <img src="{% static 'img/portfolio-1.jpg' %}" class="img-res" alt="">
-                    <h4 class="portfolio-item-title">Portfolio item</h4>
-                    <a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-                </div><!-- /.portfolio-item -->
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <div class="portfolio-item">
-                    <img src="{% static 'img/portfolio-1.jpg' %}" class="img-res" alt="">
-                    <h4 class="portfolio-item-title">Portfolio item</h4>
-                    <a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-                </div><!-- /.portfolio-item -->
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <div class="portfolio-item">
-                    <img src="{% static 'img/portfolio-1.jpg' %}" class="img-res" alt="">
-                    <h4 class="portfolio-item-title">Portfolio item</h4>
-                    <a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-                </div><!-- /.portfolio-item -->
-            </div>
-
-
-        </div>
-    </div>
-</section><!-- /.section-portfolio -->
+    </section><!-- /.section-portfolio -->
 
 {% endblock %}
