Edited book cover and add pagination

--- a/m_library/templates/accounts/profile-details.html
+++ b/m_library/templates/accounts/profile-details.html
@@ -8,7 +8,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-7">
-                    <img src="{{ object.avatar.url }}" class="wdn-stretch rounded-corners" alt="">
+                    {% if object.avatar %}
+                        <img src="{{ object.avatar.url }}" class="wdn-stretch rounded-corners" alt="">
+                    {% else %}
+                        <img src="{% static 'img/default.png' %}" class="wdn-stretch rounded-corners" alt="">
+                    {% endif %}
                 </div>
 
                 <div class="col-sm-5">
@@ -46,12 +50,12 @@
                                 <div aria-expanded="false" id="collapseOne" class="panel-collapse collapse">
                                     <div class="panel-body">
                                         {% for book in user_favourite_books %}
-                                    <ul>
-                                            <li>
-                                                <a href="{% url 'book details' pk=book.book.pk %}">{{ book.book.title }}</a>
-                                            </li>
-                                        </ul>
-                                         {% endfor %}
+                                            <ul>
+                                                <li>
+                                                    <a href="{% url 'book details' pk=book.book.pk %}">{{ book.book.title }}</a>
+                                                </li>
+                                            </ul>
+                                        {% endfor %}
                                     </div><!-- /.panel-body -->
                                 </div><!-- /.panel-collapse -->
 
@@ -67,8 +71,8 @@
 
         <div class="text-center mt-20">
             <div class="col-sm-12">
-                <a href="{% url 'edit profile' pk=request.user.pk  %}" class="btn btn-green mb-10">Edit profile</a>
-                <a href="{% url 'delete profile' pk=request.user.pk  %}" class="btn btn-fill mb-10">Delete profile</a>
+                <a href="{% url 'edit profile' pk=request.user.pk %}" class="btn btn-green mb-10">Edit profile</a>
+                <a href="{% url 'delete profile' pk=request.user.pk %}" class="btn btn-fill mb-10">Delete profile</a>
             </div>
         </div><!-- /.buttons -->
 
