--- a/m_library/templates/books/edit-book.html
+++ b/m_library/templates/books/edit-book.html
@@ -9,20 +9,23 @@
             <div class="row">
                 <div class="col-sm-15 mt-20">
                     <div class="form-group">
-                        <label for="name">*Title</label>
+                        <label for="title">*Title</label>
                         {{ form.title|add_class:'form-control' }}
 
-                        <label for="email">*Author</label>
+                        <label for="author">*Author</label>
                         {{ form.author|add_class:'form-control' }}
 
-                        <label for="name">*Genre</label>
+                        <label for="genre">*Genre</label>
                         {{ form.genre|add_class:'form-control' }}
 
-                        <label for="name">*Language</label>
+                        <label for="language">*Language</label>
                         {{ form.language|add_class:'form-control' }}
 
-                        <label for="name">*Description</label>
+                        <label for="description">*Description</label>
                         {{ form.description|add_class:'form-control' }}
+
+                        <label for="cover">Cover</label>
+                        {{ form.cover|add_class:'form-control' }}
                     </div>
                 </div>
 
