--- a/m_library/templates/blog/blog.html
+++ b/m_library/templates/blog/blog.html
@@ -1,4 +1,5 @@
 {% extends 'base/base_blog.html' %}
+{% load static %}
 {% load class_filter %}
 {% block page_content %}
 
@@ -6,7 +7,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    {% for post in posts %}
+                    {% for post in page_obj %}
 
                         <article class="blog-post">
 
@@ -19,8 +20,13 @@
                                 </div>
                                 <div class="post-meta">
                                     <span class="post-author">
-                                        <a href=""><img class="img-res" src="/media/{{ post.user.avatar }}"
-                                                        alt="">{{ post.user }}</a>
+                                        {% if post.user.avatar %}
+                                            <a href=""><img class="img-res" src="/media/{{ post.user.avatar }}"
+                                                            alt="">{{ post.user }}</a>
+                                        {% else %}
+                                            <a href=""><img class="img-res" src="{% static 'img/default.png' %}"
+                                                            alt="">{{ post.user }}</a>
+                                        {% endif %}
                                     </span>
                                     <span class="post-date">
                                         <a href=""><i class="fa fa-calendar"
@@ -37,15 +43,21 @@
                         <div class="row">
                             <div class="col-md-12 text-center">
                                 <ul class="pagination">
-                                    <li><a href="#">&lt;&lt;</a></li>
-                                    <li><a href="#">&lt;</a></li>
-                                    <li class="more"><a href="#">...</a></li>
-                                    <li><a href="#">31</a></li>
-                                    <li class="active"><a href="#">32</a></li>
-                                    <li><a href="#">33</a></li>
-                                    <li class="more"><a href="#">...</a></li>
-                                    <li><a href="#">&gt;</a></li>
-                                    <li><a href="#">&gt;&gt;</a></li>
+
+                                    {% if page_obj.has_previous %}
+                                        <li><a href="?page=1">&lt;&lt;</a></li>
+                                        <li><a href="?page={{ page_obj.previous_page_number }}">&lt;</a></li>
+                                    {% endif %}
+
+                                    <li class="active">Page {{ page_obj.number }}
+                                        of {{ page_obj.paginator.num_pages }}.
+                                    </li>
+
+                                    {% if page_obj.has_next %}
+                                        <li><a href="?page={{ page_obj.next_page_number }}">&gt;</a></li>
+                                        <li><a href="?page={{ page_obj.paginator.num_pages }}">&gt;&gt;</a></li>
+                                    {% endif %}
+
                                 </ul><!-- /.pagination -->
                             </div>
                         </div>
@@ -69,15 +81,15 @@
 
 
                             {% if request.user.is_authenticated %}
-                            <aside class="col-md-4">
-                                <div class="buttons mt-50">
-                                    <div class="row">
-                                        <div class="col-sm-12">
-                                            <a href="{% url 'add post' %}" class="btn btn-gray mb-10">Add Post</a>
+                                <aside class="col-md-4">
+                                    <div class="buttons mt-50">
+                                        <div class="row">
+                                            <div class="col-sm-12">
+                                                <a href="{% url 'add post' %}" class="btn btn-gray mb-10">Add Post</a>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                            </aside>
+                                </aside>
                             {% endif %}
 
                         </div><!-- /.search-form -->
