--- a/m_library/templates/accounts/edit-profile.html
+++ b/m_library/templates/accounts/edit-profile.html
@@ -41,8 +41,7 @@
                         <div class="form-group">
                             <label for="password" type="password">Password:</label>
                             {{ form.password.errors }}
-                            <a href="../password/"> {{ form.password|add_class:'form-control' }}</a>
-
+                            {{ form.password|add_class:'form-control' }}
                         </div>
                     </div>
 
