--- a/m_library/templates/404.html
+++ b/m_library/templates/404.html
@@ -25,7 +25,7 @@
 
     <!-- Favicon
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.png' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicon.jpg' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon.jpg' %}">
 
     <!-- Stylesheets
@@ -59,24 +59,28 @@
             <div class="collapse navbar-collapse" id="agency-navbar-collapse">
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Library</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="{% url 'all books' %}">Library</a></li>
+                    <li><a href="{% url 'blog' %}">Blog</a></li>
+
+                     {% if request.user.is_authenticated %}
 
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Add<i
                             class="fa fa-caret-down hidden-xs" aria-hidden="true"></i></a>
 
                         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                            <li><a href="#">Add book</a></li>
-                            <li><a href="#">Add blog post</a></li>
+                            <li><a href="{% url 'add book' %}">Add book</a></li>
+                            <li><a href="{% url 'add post' %}">Add blog post</a></li>
                         </ul>
 
-                    <li><a href="#">Profile</a></li>
+                    <li><a href="{% url 'profile details' pk=request.user.pk %}">Profile</a></li>
                     <!-- if user is logged in  -->
-                    <li><a href="#">Sign Out</a></li>
+                    <li><a href="{% url 'sign out' %}">Sign Out</a></li>
 
+                    {% else %}
                     <!-- else  -->
-                    <li><a href="#">Sign In</a></li>
-                    <li><a href="#">Sign Up</a></li>
+                    <li><a href="{% url 'sign in' %}">Sign In</a></li>
+                    <li><a href="{% url 'sign up' %}">Sign Up</a></li>
+                    {% endif %}
 
                 </ul>
 
@@ -92,7 +96,9 @@
             <div class="hero-content"></div>
             <div style="position: center;">
                 <h2>Sorry, we can't find the page you are looking for!</h2>
-                <a href="#" class="btn btn-border mb-10">Button</a>
+                <a class="btn btn-primary" href="javascript:history.back()">
+                    <button class="btn btn-border mb-10">Go back</button>
+                </a>
             </div>
         </div><!-- /.hero-text -->
     </div><!-- /.hero-content -->
