--- a/m_library/templates/blog/blog-post-details.html
+++ b/m_library/templates/blog/blog-post-details.html
@@ -15,8 +15,13 @@
 
                             <div class="post-meta">
                                     <span class="post-author">
+                                        {% if blogpost.user.avatar %}
                                         <a href="#"><img class="img-res" src="/media/{{ blogpost.user.avatar }}"
                                                          alt="">{{ blogpost.user }}</a>
+                                        {% else %}
+                                        <a href="#"><img class="img-res" src="{% static 'img/default.png' %}"
+                                                         alt="">{{ blogpost.user }}</a>
+                                        {% endif %}
                                     </span>
                                 <span class="post-date">
                                         <a href=""><i class="fa fa-calendar"
