--- a/m_library/templates/404.html
+++ b/m_library/templates/404.html
@@ -52,7 +52,7 @@
 
             <div class="navbar-header">
 
-                <a class="site-title"><span>M-</span>Library</a>
+                <a href="{% url 'home' %}" class="site-title"><span>M-</span>Library</a>
 
             </div><!-- /.navbar-header -->
 
