--- a/m_library/templates/blog/edit-comment.html
+++ b/m_library/templates/blog/edit-comment.html
@@ -13,7 +13,7 @@
                         <form method="post" action="{% url 'edit comment' post_id=post_id pk=object.pk%}" class="form-horizontal">
 
                             {{ form.text|add_class:'form-control form-control-comment' }}
-                            <button class="btn btn-green">Add a comment</button>
+                            <button class="btn btn-green">Edit comment</button>
                             {% csrf_token %}
                         </form>
                     </div><!-- /.respond -->
