--- a/m_library/templates/accounts/edit-profile.html
+++ b/m_library/templates/accounts/edit-profile.html
@@ -26,6 +26,7 @@
                     <div class="col-sm-15 mt-20">
                         <div class="form-group">
                             <label for="first name">First name:</label>
+                            {{ form.first_name.errors }}
                             {{ form.first_name|add_class:'form-control' }}
                         </div>
                     </div>
@@ -33,6 +34,7 @@
                     <div class="col-sm-15 mt-20">
                         <div class="form-group">
                             <label for="last name">Last name:</label>
+                            {{ form.last_name.errors }}
                             {{ form.last_name|add_class:'form-control' }}
                         </div>
                     </div>
