--- a/m_library/templates/blog/edit-comment.html
+++ b/m_library/templates/blog/edit-comment.html
@@ -13,6 +13,7 @@
                         <form method="post" action="{% url 'edit comment' post_id=post_id pk=object.pk%}" class="form-horizontal">
 
                             {{ form.text|add_class:'form-control form-control-comment' }}
+                            {{ form.text.errors }}
                             <button class="btn btn-green">Edit comment</button>
                             {% csrf_token %}
                         </form>
