--- a/m_library/templates/books/delete-book.html
+++ b/m_library/templates/books/delete-book.html
@@ -37,11 +37,16 @@
             <div class="text-center mt-20">
                 <button class="btn btn-fill mb-10">Delete</button>
                 {% csrf_token %}
-                <a href="javascript:history.back()">
-                    <button class="btn btn-fill mb-10">Go back</button>
-                </a>
+
             </div>
         </form>
+
+        <div class="text-center">
+            <a href="javascript:history.back()">
+                <button class="btn btn-fill mb-10">Go back</button>
+            </a>
+            </div>
+
     </div>
 
 
