--- a/m_library/templates/blog/delete-blog-post.html
+++ b/m_library/templates/blog/delete-blog-post.html
@@ -11,12 +11,13 @@
                 <div class="text-center mt-20">
                     <button class="btn btn-green mb-10">Delete</button>
                     {% csrf_token %}
-                    <a class="btn btn-primary" href="javascript:history.back()">
-                        <button class="btn btn-green">Go back</button>
-                    </a>
                 </div>
-
             </form>
+            <div class="text-center mt-20">
+                <a href="javascript:history.back()">
+                    <button class="btn btn-green">Go back</button>
+                </a>
+            </div>
         </div>
     </div>
 {% endblock %}
